# arduino_interface

./: CMakeLists.txt  Log.cpp  Log.hh  README.md  download_deps.sh  http_getter.cpp  main.cpp  serial_monitor.cpp
bak/dependencies/: CMakeLists.txt
bak/dependencies/influxdb-cxx/cpr/: CMakeLists.txt
cmake/: FindTCLAP.cmake
dependencies/influxdb-cxx/: CMakeLists.txt
dependencies/influxdb-cxx/Catch2/: CMakeLists.txt
dependencies/influxdb-cxx/trompeloeil/: CMakeLists.txt
examples/: http_getter.cpp  influxwrite.cpp  serial_monitor.cpp  servers.json
include/: HttpHelper.hh  Log.hh  Parfor.hh  parfor.hh  typedefs.hh
scripts/: install_deps.sh
src/: Log.cpp
